--- a/_posts/xyz+/2021-06-05--seo.md
+++ b/_posts/xyz+/2021-06-05--seo.md
@@ -9,7 +9,7 @@ thumbnail: '/asset/images/xyz+/seo/thumbnail.png'
 thumbnail_type: 'v-full'
 ---
 
-<div class="info-wrapper mb-5">
+<div class="info-wrapper mb-8">
 <i class="fas fa-info-circle mr-1"></i> 최소한의 SEO meta tag와 sitemap.xml이 있다는 가정하에 작성
 </div>
 
@@ -17,10 +17,10 @@ thumbnail_type: 'v-full'
 
 #### <em class="step-badge mr-1">1</em> Google 검색엔진에 내 사이트를 등록하고
 * [Google search console](https://search.google.com/search-console/welcome?utm_source=about-page){:target="_blank"} 에서 `URL 접두어`유형 영역에 내 사이트 URL을 입력한 다음 `계속` 클릭   
-![step1-1]({{ "/step1-1.png"| prepend: thumbnail_path | relative_url }})
+![step1-1]({{ "/step1-1.png"| prepend: thumbnail_path | relative_url }}){:class="mt-2"}
 
 * 소유권 확인 레이어에서 `다른확인방법 > HTML 태그` 영역을 열어 가이드 대로 사이트에 메타데이터를 적용   
-![step1-2]({{ "/step1-2.png"| prepend: thumbnail_path | relative_url }})
+![step1-2]({{ "/step1-2.png"| prepend: thumbnail_path | relative_url }}){:class="mt-2"}
 <p class="info-message ml-3 mb-8">배포가 다 된 다음에 확인을 요청해야 정상 인증 가능</p>
 
 
