--- a/_posts/xyz+/2021-06-05--seo.md
+++ b/_posts/xyz+/2021-06-05--seo.md
@@ -6,7 +6,7 @@ category: xyz+
 sub_category: SEO
 tags: seo google search console web crawling
 thumbnail: '/asset/images/xyz+/seo/thumbnail.png'
-thumbnail_type: 'v-full'
+thumbnail_type: v-full
 ---
 
 <div class="info-wrapper mb-8">
