--- a/_posts/xyz+/2021-06-05--seo.md
+++ b/_posts/xyz+/2021-06-05--seo.md
@@ -10,7 +10,7 @@ thumbnail_type: v-full
 ---
 
 <div class="info-wrapper mb-8">
-<i class="fas fa-info-circle mr-1"></i> 최소한의 SEO meta tag와 sitemap.xml이 있다는 가정하에 작성
+<i class="fas fa-info-circle mr-1"></i> 최소한의 SEO meta tag와 sitemap.xml은 있다고 가정
 </div>
 
 {% assign thumbnail_path = '/asset/images/xyz+/seo' %}
